# quant_research_lab

./: .pre-commit-config.yaml  pyproject.toml
data/raw/: prices_e1a9a81220.csv
outputs/flagship_equity_signals/20260122-114030-9b0ae10/: metrics.json
outputs/flagship_equity_signals/20260123-105937-6402e06/: metrics.json
projects/flagship_equity_signals/: README.md  config.yaml  run_experiment.py
src/quantlab/: backtest.py  config.py  data.py  metrics.py  paths.py  simdata.py
src/quantlab.egg-info/: PKG-INFO  SOURCES.txt
