[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab"
version = "0.1.0"
description = "Quant research lab: data, backtests, risk, and reproducible experiments."
requires-python = ">=3.10"
dependencies = ["pyyaml", "numpy", "matplotlib"]

[tool.setuptools]
package-dir = {"" = "src"}
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
